--- a/Prueba_tuya.ipynb
+++ b/Prueba_tuya.ipynb
@@ -14,12 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "2c8fe3f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from html.parser import HTMLParser"
+    "from html.parser import HTMLParser\n",
+    "import os, base64"
    ]
   },
   {
@@ -28,7 +29,104 @@
    "id": "5df04815",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Creo clase para parsear img en html heredando libreria built-in\n",
+    "\n",
+    "class ParserImg(HTMLParser):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.all_src = []\n",
+    "        \n",
+    "        ## Atributos para reemplazar los src al final\n",
+    "        self.result = []\n",
+    "        self.img_index = [] \n",
+    "        self.img_attrs = []\n",
+    "    \n",
+    "    \n",
+    "    def handle_starttag(self, tag, attrs): \n",
+    "        ## Filtro los tag \"img\"\n",
+    "        if tag == \"img\":\n",
+    "            ## Almaceno los atributos en un diccionario y obtengo los src de las imagenes \n",
+    "            d = dict(attrs)            \n",
+    "            self.all_src.append(d[\"src\"])\n",
+    "                    \n",
+    "            self.img_index.append( len(self.result) ) \n",
+    "            self.img_attrs.append( d ) \n",
+    "\n",
+    "            self.result.append(self.get_starttag_text())\n",
+    "    \n",
+    "        else:\n",
+    "            self.result.append(self.get_starttag_text())\n",
+    "            \n",
+    "                \n",
+    "    def handle_endtag(self, tag):\n",
+    "        self.result.append(f\"</{tag}>\")\n",
+    "\n",
+    "        \n",
+    "    def handle_data(self, data):\n",
+    "        self.result.append(data)\n",
+    "        \n",
+    "            \n",
+    "    def modify_src(self, new_srcs):\n",
+    "        for i, idx, src in zip(range(len(new_srcs)), self.img_index, new_srcs):\n",
+    "            attrs = self.img_attrs[i]\n",
+    "            attrs[\"src\"] = src\n",
+    "            \n",
+    "            new_img = \"<img \" + \" \".join(f'{k}=\"{v}\"' for k, v in attrs.items()) + \">\"\n",
+    "            self.result[idx] = new_img\n",
+    "            \n",
+    "        return \"\".join(self.result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f72e04b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origen_html = \"Archivos_HTML\"\n",
+    "destino_html = \"Archivos_HTML_base64\"\n",
+    "\n",
+    "for path in os.listdir(origen_html):\n",
+    "    if path.endswith(\".html\"):\n",
+    "        with open(f\"{origen_html}/{path}\", encoding=\"utf-8\") as f:\n",
+    "            html = f.read()\n",
+    "            \n",
+    "        ## Instancio el parser para cada html\n",
+    "        parser = ParserImg()\n",
+    "        parser.feed(html)\n",
+    "        \n",
+    "        ## Itero para obtener cada src de img\n",
+    "        src_b64 = []\n",
+    "        for src in parser.all_src:\n",
+    "            \n",
+    "            ## Leo cada imagen y convierto a base64\n",
+    "            with open(f\"{origen_html}/{src}\", \"rb\") as f:\n",
+    "                img = f.read()\n",
+    "                \n",
+    "            img_b64 = base64.b64encode(img).decode(\"utf-8\")\n",
+    "            src_b64.append(f\"data:image/png;base64,{img_b64}\")  # Almaceno cada img en base64\n",
+    "            \n",
+    "        ## Hago una copia del html original reemplazando los src\n",
+    "        new_html = parser.modify_src(src_b64)     \n",
+    "        \n",
+    "        ## Guardo el nuevo html con las img en base64\n",
+    "        with open(f\"{destino_html}/{path}\", \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(new_html)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "983c3773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## En el nuevo html la imagen se carga en base64 sin problema...  otra cosa es el css, que no hace parte del caso planteado..."
+   ]
   },
   {
    "cell_type": "code",
@@ -99,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b16badde",
    "metadata": {},
    "outputs": [
@@ -123,7 +221,7 @@
    "source": [
     "## Casteo fecha\n",
     "\n",
-    "transac[\"FECHA_TRANSACCION\"] = pd.to_datetime(transac[\"FECHA_TRANSACCION\"], yearfirst=True )\n",
+    "transac[\"FECHA_TRANSACCION\"] = pd.to_datetime(transac[\"FECHA_TRANSACCION\"], yearfirst=True)\n",
     "transac.dtypes"
    ]
   },
